# kiv-ups

c01/: doc.md
c02/: doc.md
c03/: doc.md
c03/TCPa/: client.c  clt  ser  server.c
c03/bonus/: client.c  server  server.c
c03/bonus/2000/: Makefile  client  client.c
c03/bonus/2001/: client  client.c
c03/bonus/2002/: client  client.c
c04/: doc.txt
c04/bonus/: .gitignore  CMakeLists.txt  client_details.hpp  server.cpp  server.hpp
c05/: asn_uer_cviko.txt  barebone_client.py  client.py  cviko_client.py
semestralka/client/: .gitignore  client.py  dumb.py  dummy.py  gen_client.py  run.py  run_prsi.py  setup.bash  todo.txt
semestralka/server/: .gitignore  CMakeLists.txt  cfg  client_details.cpp  main.cpp  readme.txt  server.cpp
semestralka/server/auto/: build.bash  run.bash
semestralka/server/bonus/: CMakeLists.txt
semestralka/server/include/: prsi.hpp
semestralka/server/include/game/: Card.hpp  Lobby.hpp  Player.hpp  Prsi_Game.hpp  Room.hpp
semestralka/server/include/prsi/game/: Card.hpp  Game.hpp  GameManager.hpp  Lobby.hpp  Model.hpp  Perspective.hpp  Player.hpp  Room.hpp  game_engine.hpp  player.hpp  room.hpp
semestralka/server/include/prsi/interfaces/: ILoggable.hpp
semestralka/server/include/prsi/mgr/: game_manager.hpp  lobby.hpp  room.hpp
semestralka/server/include/prsi/mgr/event/: i_event.hpp  in_event.hpp  out_event.hpp
semestralka/server/include/prsi/mgr/event/in/: control_event.hpp  game_event.hpp  lobby_event.hpp  room_event.hpp
semestralka/server/include/prsi/net/: error.hpp  i_protocol.hpp  protocol_handler.hpp  server.hpp  session.hpp  string_protocol.hpp  string_prsi_protocol.hpp
semestralka/server/include/prsi/server/: Protocol.hpp  Server.hpp  Session.hpp  SessionManager.hpp
semestralka/server/include/prsi/util/: Config.hpp  Logger.hpp  config.hpp  logger.hpp
semestralka/server/include/server/: Client.hpp  Message.hpp  Protocol.hpp  Server.hpp
semestralka/server/include/util/: Config.hpp  Logger.hpp
semestralka/server/src/: card.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  main.cpp  player.cpp  player.hpp  protocol.cpp  protocol.hpp  room.cpp  room.hpp  server.cpp  server.hpp
semestralka/server/src/game/: CMakeLists.txt  Lobby.cpp  Model.cpp  Prsi_Game.cpp  Room.cpp
semestralka/server/src/net/: server.cpp  session.cpp  string_protocol.cpp
semestralka/server/src/server/: CMakeLists.txt  Client.cpp  Server.cpp
semestralka/server/src/util/: CMakeLists.txt  Config.cpp
semestralka/server/tests/: CMakeLists.txt
semestralka/server_old/: .gitignore  CMakeLists.txt  README.md
uceni/: L1_1.heic  L1_2.heic  L1_3.heic  L1_4.heic  L2_1.heic  L2_2.heic  L2_3.heic  L2_4.heic  L2_5.heic  L2_6.heic  L3_1.heic  L3_2.heic  L3_3.heic  L3_4.heic  L3_5.heic  L3_6.heic  L4_.heic  L4_2.heic  L4_3.heic  L567_1.heic  L567_2.heic  L567_3.heic  L567_4.heic  README.txt  communication_overview.heic
(+26 files in other folders)
